--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,4 +33,9 @@ jobs:
       - name: Run a multi-line script
         run:
           echo 17 + 4 =
-          $(expr 17 + 4)
+          $(expr 17 + 4) > math-homework.txt
+      - name: Upload math result for job
+        uses: actions/upload-artifact@v2
+        with:
+          name: homework
+          path: math-homework.txt
