--- a/.github/workflows/lolo.yaml
+++ b/.github/workflows/lolo.yaml
@@ -5,10 +5,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: infraway/tweet-action@v1
+      - uses: devigned/go-twitter-action@v1
         with:
-          status: Tweeted from Github Actions  automatisch nach push in Repository
-          api_key: ${{ secrets.TWITTER_API_KEY }}
-          api_key_secret: ${{ secrets.TWITTER_API_KEY_SECRET }}
-          access_token: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-          access_token_secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+          message: "Hey folks we just release a new version of ACME widgets!"
+          apiKey: ${{ secrets.API_KEY }}
+          apiKeySecret: ${{ secrets.API_KEY_SECRET }}
+          accessToken: ${{ secrets.ACCESS_TOKEN }}
+          accessTokenSecret: ${{ secrets.ACCESS_TOKEN_SECRET }}
