--- a/.github/workflows/lolo.yaml
+++ b/.github/workflows/lolo.yaml
@@ -1,18 +1,12 @@
-name: Notify twitter
-
-on:
-  workflow_dispatch:
-  release:
-    types: [published]
-
+name: Send a Tweet
+on: [push]
 jobs:
-  setup:
+  tweet:
     runs-on: ubuntu-latest
     steps:
-      - uses: nearform/github-action-notify-twitter@master
+      - uses: ethomson/send-tweet-action@v1
         with:
-          message: |
-            ${{ github.event.repository.name }} ${{ github.event.release.tag_name }} has been released. Check out the release notes: ${{ github.event.release.html_url }}
+          status: "Hi, this is a test!"
           twitter-app-key: ${{ secrets.TWITTER_APP_CONSUMER_API_KEY }}
           twitter-app-secret: ${{ secrets.TWITTER_APP_CONSUMER_API_SECRET_KEY }}
           twitter-access-token: ${{ secrets.TWITTER_APP_ACCESS_TOKEN }}
