--- a/.github/workflows/lolo.yaml
+++ b/.github/workflows/lolo.yaml
@@ -7,7 +7,7 @@ jobs:
       - uses: ethomson/send-tweet-action@v1
         with:
           status: "Hi, this is a test!"
-          twitter-app-key: ${{ secrets.TWITTER_APP_CONSUMER_API_KEY }}
-          twitter-app-secret: ${{ secrets.TWITTER_APP_CONSUMER_API_SECRET_KEY }}
-          twitter-access-token: ${{ secrets.TWITTER_APP_ACCESS_TOKEN }}
-          twitter-access-token-secret: ${{ TWITTER_APP_ACCESS_TOKEN_SECRET }}
+          twitter-app-key: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
+          twitter-app-secret: ${{ secrets.TWITTER_CONSUMER_API_SECRET_KEY }}
+          twitter-access-token: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          twitter-access-token-secret: ${{ TWITTER_ACCESS_TOKEN_SECRET }}
