--- a/.github/workflows/twitter-together.yaml
+++ b/.github/workflows/twitter-together.yaml
@@ -1,123 +1,13 @@
-name: 'testing workflow'
-# Trigger on push
-  push:
-    branches:
-      - master
+on:push
 jobs:
-  test:
-    name: posting_on_twitter
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: tweety
-        uses: m1ner79/Github-Twittction@{VERSION}
+      - name: Post Twitter Status
+        uses: julb/action-post-twitter-status@v1
         with:
-            twitter_status: "ℍ𝕖𝕪 𝕪𝕠𝕦! 👋 𝕎𝕖 ${{ github.event.repository.owner.name}} 𝕙𝕒𝕧𝕖 𝕒 𝕟𝕖𝕨 𝕔𝕠𝕞𝕞𝕚𝕥 𝕚𝕟 𝕥𝕙𝕖 𝕞𝕒𝕤𝕥𝕖𝕣 𝕓𝕣𝕒𝕟𝕔𝕙 🥳 \n 𝕀𝕥𝕤 𝕟𝕒𝕞𝕖 𝕚𝕤 ${{ github.event.commits[0].message }} 😱 \n ℂ𝕙𝕖𝕔𝕜 𝕚𝕥 𝕠𝕦𝕥 𝕙𝕖𝕣𝕖 👇 \n ${{ github.event.commits[0].url }}"
-            twitter_consumer_key: ${{ secrets.TWITTER_CONSUMER_KEY }} 
-            twitter_consumer_secret: ${{ secrets.TWITTER_CONSUMER_SECRET }} 
-            twitter_access_token_key: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }} 
-            twitter_access_token_secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }} 
-
-pull_request event
-
-name: 'testing workflow'
-# Trigger on pull_request
-on: 
-  pull_request:
-    types:
-      - opened
-jobs:
-  test:
-    name: posting_on_twitter
-    runs-on: ubuntu-latest
-    steps:
-      - name: tweety
-        uses: m1ner79/Github-Twittction@{VERSION}
-        with:
-            twitter_status: "🅆🄴 🄲🄰🄽 🅂🄴🄴 🄰 🄿🅄🄻🄻_🅁🄴🅀🅄🄴🅂🅃 ${{github.event.pull_request.title}} 🄲🅁🄴🄰🅃🄴🄳 🄱🅈 ${{github.event.pull_request.head.repo.full_name}} 🄲🄻🄸🄲🄺 🄷🄴🅁🄴 ${{github.event.pull_request.html_url}} 🄰🄽🄳 🅂🄴🄴 🄸🅃 🅈🄾🅄🅁🅂🄴🄻🄵"
-            twitter_consumer_key: ${{ secrets.TWITTER_CONSUMER_KEY }} 
-            twitter_consumer_secret: ${{ secrets.TWITTER_CONSUMER_SECRET }} 
-            twitter_access_token_key: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }} 
-            twitter_access_token_secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }} 
-
-release event
-
-name: 'testing workflow'
-# Trigger on release
-on: 
-  release:
-    types: 
-      - published
-jobs:
-  test:
-    name: posting_on_twitter
-    runs-on: ubuntu-latest
-    steps:
-      - name: tweety
-        uses: m1ner79/Github-Twittction@{VERSION}
-        with:
-            twitter_status: "Ⓛⓞⓞⓚⓢ ⓛⓘⓚⓔ ⓐ ⓝⓔⓦ ⓡⓔⓛⓔⓐⓢⓔ ${{github.event.release.tag_name}} ⓘⓢ ⓘⓝ ${{github.event.repository.full_name}} .Ⓜⓞⓡⓔ ⓓⓔⓣⓐⓘⓛⓢ ⓐⓡⓔ ⓐⓥⓐⓘⓛⓐⓑⓛⓔ ⓗⓔⓡⓔ ${{github.event.release.html_url}}"
-            twitter_consumer_key: ${{ secrets.TWITTER_CONSUMER_KEY }} 
-            twitter_consumer_secret: ${{ secrets.TWITTER_CONSUMER_SECRET }} 
-            twitter_access_token_key: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }} 
-            twitter_access_token_secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }} 
-
-Without custom message
-
-name: 'testing workflow'
-# Trigger on push
-on: 
-  push:
-    branches:
-      - master
-jobs:
-  test:
-    name: posting_on_twitter
-    runs-on: ubuntu-latest
-    steps:
-      - name: tweety
-        uses: m1ner79/Github-Twittction@{VERSION}
-        with:
-            # twitter_status: is deactivated so you will see one of our default messages
-            # twitter_status: "ℍ𝕖𝕪 𝕪𝕠𝕦! 👋 𝕎𝕖 ${{ github.event.repository.owner.name}} 𝕙𝕒𝕧𝕖 𝕒 𝕟𝕖𝕨 𝕔𝕠𝕞𝕞𝕚𝕥 𝕚𝕟 𝕥𝕙𝕖 𝕞𝕒𝕤𝕥𝕖𝕣 𝕓𝕣𝕒𝕟𝕔𝕙 🥳 \n 𝕀𝕥𝕤 𝕟𝕒𝕞𝕖 𝕚𝕤 ${{ github.event.commits[0].message }} 😱 \n ℂ𝕙𝕖𝕔𝕜 𝕚𝕥 𝕠𝕦𝕥 𝕙𝕖𝕣𝕖 👇 \n ${{ github.event.commits[0].url }}"
-            twitter_consumer_key: ${{ secrets.TWITTER_CONSUMER_KEY }} 
-            twitter_consumer_secret: ${{ secrets.TWITTER_CONSUMER_SECRET }} 
-            twitter_access_token_key: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }} 
-            twitter_access_token_secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }} 
-
-Default messages
-
-push default message:
-`${payload.pusher.name} just created a commit to ${payload.repository.full_name}. More details are available here: ${payload.commits[0].url}`
-
-pull_request default message:
-`${payload.pull_request.head.repo.full_name} just created a pull request: ${payload.pull_request.title}. More info is available here: ${payload.pull_request.html_url}`;
-
-release default message:
-`A new release ${payload.release.tag_name} is in ${payload.repository.full_name}. More details are available here ${payload.release.html_url}`;
-
-Custom message
-
-To create a custom twitter post I used these two websites:
-
-    https://lingojam.com/TwitterFonts
-    https://www.piliapp.com/twitter-symbols/
-
-Go nuts and make it as sparkly as you like (just remember about twitter character limitations https://developer.twitter.com/en/docs/basics/counting-characters).
-Contributing
-
-Contributions are more than welcome handshake.
-License
-
-MIT
-Stars
-Contributors
-@m1ner79 @dependabot
-Categories
-Chat Publishing
-Links
-m1ner79/Github-Twittction
-Open issues 0
-Pull requests 2
-Report abuse
-
-GitHub Twittction is not certified by GitHub. It is provided by a third-party and is governed by separate terms of service, privacy policy, and support documentation.
+          message: "Hello from Github Action!"
+          twitter_app_consumer_api_key: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
+          twitter_app_consumer_api_secret_key: ${{ secrets.TWITTER_CONSUMER_API_SECRET_KEY }}
+          twitter_app_access_token: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          twitter_app_access_token_secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
